fix: More dark mode fixes
This first commit increases contrast of the leftmenu text.

--- a/ietf/static/css/ietf.scss
+++ b/ietf/static/css/ietf.scss
@@ -205,8 +205,8 @@ pre {
         --#{$prefix}dropdown-divider-bg: #{$dropdown-divider-bg};
         --#{$prefix}dropdown-divider-margin-y: #{$dropdown-divider-margin-y};
         --#{$prefix}dropdown-box-shadow: #{$dropdown-box-shadow};
-        --#{$prefix}dropdown-link-color: #{$dropdown-link-color};
-        --#{$prefix}dropdown-link-hover-color: #{$dropdown-link-hover-color};
+        --#{$prefix}dropdown-link-color: #{$nav-link-color};
+        --#{$prefix}dropdown-link-hover-color: #{$nav-link-hover-color};
         --#{$prefix}dropdown-link-hover-bg: #{$dropdown-link-hover-bg};
         --#{$prefix}dropdown-link-active-color: #{$dropdown-link-active-color};
         --#{$prefix}dropdown-link-active-bg: #{$dropdown-link-active-bg};
